added the watched/unwatched endpoint
